<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@id/text_view_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="@string/composite_text_character_species" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@id/text_view_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_species"
        tools:text="@string/composite_text_character_gender" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@id/text_view_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_gender"
        tools:text="@string/composite_text_character_type" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@id/text_view_origin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_type"
        tools:text="@string/composite_text_character_status" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@id/text_view_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_status"
        tools:text="@string/composite_text_character_origin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_origin"
        tools:text="@string/composite_text_character_location" />

</androidx.constraintlayout.widget.ConstraintLayout>