<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_text_view_info_header"
        app:layout_constraintBottom_toTopOf="@id/text_view_species"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="Name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_text_view_info"
        app:layout_constraintBottom_toTopOf="@id/text_view_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_name"
        tools:text="@string/composite_text_character_species" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_text_view_info"
        app:layout_constraintBottom_toTopOf="@id/text_view_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_species"
        tools:text="@string/composite_text_character_status" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_text_view_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_status"
        tools:text="@string/composite_text_character_gender" />


</androidx.constraintlayout.widget.ConstraintLayout>