<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="#0f0">-->

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_character"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/baseline_image_24" />

        <include
            android:id="@+id/layout_character_details_texts"
            layout="@layout/layout_character_details_texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_character"
            app:layout_constraintBottom_toTopOf="@id/text_view_character_origin"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_character_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toTopOf="@id/text_view_character_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_character_details_texts"
            tools:text="@string/text_character_origin" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_character_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toTopOf="@id/text_view_character_episodes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_character_origin"
            tools:text="@string/text_character_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_character_episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toTopOf="@id/fragment_container_character_episodes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_character_location"
            android:text="@string/text_character_episodes" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_character_episodes"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_character_episodes"
            tools:layout="@layout/fragment_episode_list"
            android:layout_margin="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--</androidx.core.widget.NestedScrollView>-->